# eigen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  library.json  library.properties
examples/arduino/eigen_example/: eigen_example.ino
examples/cmake/: eigen_example.cc
src/: eigen.h
src/Eigen/src/Core/products/: GeneralBlockPanelKernel.h
src/Eigen/src/Core/util/: Meta.h
src/Eigen/src/LU/arch/: InverseSize4.h
src/Eigen/src/SVD/: BDCSVD.h
src/Eigen/src/SparseQR/: SparseQR.h
